# matrix

./: CMakeLists.txt  main.cpp  methods.cpp  methods.h
classes/: SquareMatrix.cpp  SquareMatrix.h  Vector.cpp  Vector.h
classes/polynomial/: CMakeLists.txt  FirstDegPolynomial.cpp  FirstDegPolynomial.h  SecondDegPolynomial.cpp  SecondDegPolynomial.h  Sides.h  ThirdDegPolynomial.cpp  ThirdDegPolynomial.h  math_functions.cpp  math_functions.h
